# simd_math

./: Cargo.toml
benches/: fma.rs  powf.rs
src/: lib.rs
