[package]
name = "simd_math"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.4.0"
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
micromath = "2.0.0"
sleef = "0.3.0"
packed_simd = { version = "0.3.8", package = "packed_simd_2" }

[[bench]]
name = "powf"
harness = false

[[bench]]
name = "fma"
harness = false